--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,10 +1,10 @@
 button {
     display: inline-block;
-    height: (36/16) + rem;
-    padding: 0 (18/16) + rem;
+    height: px-to-rem(36);
+    padding: 0 px-to-rem(18);
     cursor: pointer;
     border: none;
-    border-radius: (18/16) + rem;
+    border-radius: px-to-rem(18);
     appearance: none;
 }
 
